[#44889] src/components styles: Fix sidebar and notifications overlap

--- a/pipeline_manager/frontend/styles/_editor.scss
+++ b/pipeline_manager/frontend/styles/_editor.scss
@@ -114,8 +114,9 @@
 
 .baklava-node-palette {
     top: 0px;
-    height: 100%;
+    // default baklavjs height - terminal panel height
+    height: calc(100% - 60px - 35px);
     width: auto;
-    padding: 1rem;
+    padding: 0px 1rem;
     z-index: 1;
 }
